force-app/main/default/objects/SFFR_Campaign_Content__c/SFFR_Campaign_Content__c.object-meta.xml
<CustomObject>
    <label>Campaign Content</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>