force-app/main/default/objects/SFFR_Campaign_Content__c/fields/SFFR_Total_Cost_Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Total_Cost_Campaign_Content__c</fullName>
    <formula>IF(NULLVALUE(SFFR_Unit_Cost__c, 0)==0,0,SFFR_Unit_Cost__c) + IF(NULLVALUE(SFFR_Total_Cost_Items__c,0)==0 , 0,SFFR_Total_Cost_Items__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: total Amount of all Related Content Items plus the Cost of the Content Unit Cost</inlineHelpText>
    <label>Total Campaign Content Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>