force-app/main/default/objects/SFFR_Campaign_Content__c/fields/SFFR_Total_Cost_Items__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Total_Cost_Items__c</fullName>
    <inlineHelpText>The Total Amount of all Content Items.</inlineHelpText>
    <label>Items Cost</label>
    <summarizedField>SFFR_Campaign_Content_Item__c.SFFR_Unit_Cost__c</summarizedField>
    <summaryForeignKey>SFFR_Campaign_Content_Item__c.SFFR_Campaign_Content__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>