force-app/main/default/objects/SFFR_Campaign_Content__c/fields/SFFR_Type__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Type__c</fullName>
    <inlineHelpText>Determines the type of Campaign Content</inlineHelpText>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DirectMail</fullName>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>PhoneScript</fullName>
                <label>Phone Script</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>