force-app/main/default/objects/SFFR_Campaign_Content__c/fields/SFFR_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Unit_Cost__c</fullName>
    <inlineHelpText>The Unit Cost of the Campaign Content.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>